src/components/modals/main/scss/settings/modules/tabs/_order.scss
@import '../../../../../../../scss/variables';

.sortableItem {
  @include themed() {
    padding: 15px;
    margin-bottom: 10px;
    font-size: 1.325rem;
    color: t($color) !important;
    cursor: move;
    width: 200px;
    z-index: 999 !important;
    display: flex;
    justify-content: space-between;
    align-items: center;

    background: t($modal-sidebar);
    border: 3px solid t($modal-sidebarActive);
    border-radius: t($borderRadius);

    svg {
      font-size: 1.3rem;
      color: t($subColor);
    }

    &:hover {
      background: t($modal-sidebarActive) !important;
    }
  }

  ul {
    -webkit-padding-start: 0;
    padding: 0;
    list-style-type: none;

    > label {
      vertical-align: middle;
    }
  }
}

.sortablecontainer {
  -webkit-padding-start: 0;
  padding: 0;
  list-style-type: none;
}

.images-row {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  height: 250px;
  padding: 20px;
  grid-gap: 20px;
  @include themed() {
    div {
      background: t($modal-sidebar);
      padding: 10px;
      box-shadow: 0 0 0 4px t($modal-sidebarActive);
      border-radius: t($borderRadius);
      gap: 10px;
      display: flex;
      justify-content: center;
      img {
        width: auto;
        height: 100px;
        border-radius: t($borderRadius);
      }
    }
    .iconButton {
      width: calc(100% - 22px);
      margin-top: 10px;
      @include basicIconButton(11px, 1.3rem, modal);
    }
  }
}

